# dsqs

./: Dockerfile  README.md
client/: Cargo.toml  build.rs
client/src/: lib.rs
proto/: dsqs.proto
server/: Cargo.toml  build.rs
server/src/: config.rs  main.rs  queue.rs  server.rs
