[package]
name = "dsqs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
futures = "0.3.31"
prost = "0.13.3"
tokio = { version =  "1.40.0", features = ["rt-multi-thread", "macros"]}
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.12"
